# ihm

./: .gitignore  .gitmodules  README.md
ui/: .gitignore  CMakeLists.txt  lv_conf.h
ui/cmake/toolchains/: raspberrypi3-linux-aarch64.cmake  raspberrypi3-linux-gnueabihf.cmake
ui/components/: game_db.c  game_db.h  game_logic.c  game_logic.h
ui/screens/: scr_bonus_wheel.c  scr_bonus_wheel.h  scr_gaming.c  scr_gaming.h  scr_give_modifier.c  scr_give_modifier.h  scr_home.c  scr_home.h  scr_leaderboard.c  scr_leaderboard.h  scr_parameters.c  scr_parameters.h  scr_profile_select.c  scr_profile_select.h  scr_saving.c  scr_saving.h
ui/src/: main.c  platform_linux.c  platform_linux.h  screen_manager.c  screen_manager.h  serial_comm.c  serial_comm.h
ui/widgets/: wheel_fortune.c  wheel_fortune.h
